[project]
name = "api-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy==1.26.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=1.10.23",
    "pydantic-core>=2.39.0",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.3",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
]
